--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "mdbook-classy"
 version = "0.1.0"
 
-authors = ["Doug Bradshaw <dhbradshaw@gmail.com>"]
+authors = ["Doug Bradshaw <dhbradshaw@gmail.com>", "Reece McMillin <reecemcmillin@gmail.com>"]
 categories = ["command-line-utilities"]
 description = "An mdbook preprocessor for adding html-css classes to markdown."
-edition = "2018"
+edition = "2021"
 exclude = [
     "examples/*",
 ]
@@ -16,8 +16,9 @@ readme = "README.md"
 repository = "https://github.com/reviewable/mdbook-classy"
 
 [dependencies]
-clap = "2.33"
+clap = "3.0.7"
 mdbook = "0.4"
-pulldown-cmark = "0.7"
-pulldown-cmark-to-cmark = "4.0"
+nom = "7.1.0"
+pulldown-cmark = "0.9.0"
+pulldown-cmark-to-cmark = "9.0.0"
 serde_json = "1.0"
