--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "mdbook-classy"
 version = "0.1.0"
+rust-version = "1.58.0"
 
 authors = ["Doug Bradshaw <dhbradshaw@gmail.com>", "Reece McMillin <reecemcmillin@gmail.com>"]
 categories = ["command-line-utilities"]
@@ -9,7 +10,7 @@ edition = "2021"
 exclude = [
     "examples/*",
 ]
-homepage = "https://github.com/reviewable/mdbook-classy"
+homepage = "https://github.com/ReeceMcMillin/mdbook-classy"
 keywords = ["mdbook", "classy", "markdown", "commonmark","css"]
 license = "MIT"
 readme = "README.md"
@@ -21,5 +22,4 @@ mdbook = "0.4"
 pulldown-cmark = "0.9"
 pulldown-cmark-to-cmark = "9.0"
 serde_json = "1.0"
-
 nom = "7.1.0"
